fixed header on mobile

--- a/CS21-Web-Task2/css/main.css
+++ b/CS21-Web-Task2/css/main.css
@@ -247,7 +247,9 @@ img {
 
 @media (max-width: 720px) {
     .header-right {
-        display: none;
+        float: none;
+        display: inline-flex;
+        text-align: center;
     }
     .header {
         text-align: center;
